Fixed contrast on webpage

--- a/FarmRecordManagementSystem/FarmRecordManagementSystem/wwwroot/css/bootstrap.css
+++ b/FarmRecordManagementSystem/FarmRecordManagementSystem/wwwroot/css/bootstrap.css
@@ -63,8 +63,8 @@
   --bs-body-font-size: 1rem;
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
-  --bs-body-color: #fff;
-  --bs-body-bg: #0e562b;
+  --bs-body-color: #ffffff;
+  --bs-body-bg: #0A3119;
   --bs-border-width: 1px;
   --bs-border-style: solid;
   --bs-border-color: rgba(255, 255, 255, 0.2);
@@ -102,7 +102,7 @@ body {
   color: var(--bs-body-color);
   text-align: var(--bs-body-text-align);
   background-color: var(--bs-body-bg);
-  background-image: linear-gradient(90deg, #89e295, #3b8e51, #6dc36d);
+  /* background-image: linear-gradient(90deg, #89e295, #3b8e51, #6dc36d); */
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
